# geonode-migrate

./: .env.example  .gitignore  README.md  pyproject.toml
bruno/geonode3/: bruno.json
bruno/geonode3/Geoserver/: API base geoserver.bru  resource.bru  style.bru  styles.bru
bruno/geonode3/V3/: API base.bru  Maps.bru  Users.bru
bruno/geonode3/V3/Documents/: Get document.bru  List documents.bru
bruno/geonode3/V3/Layers/: List layers.bru  get layer.bru
bruno/geonode3/V4/: API base v2 2.bru  API base v2.bru  Get csrf.bru  Login.bru
bruno/geonode3/V4/Auth/: Create group.bru  Create user.bru  Get token.bru  Login.bru
bruno/geonode3/V4/documents/: list documents.bru  update documents.bru
src/: main.py
src/geonode_migrate/: cli.py  commands.py  config.py  utils.py
src/geonode_migrate/templates/: map_body.json
src/geonode_migrate/v3/: commands.py  documents.py  keywords.py  layers.py  maps.py  users.py
src/geonode_migrate/v4/: commands.py  documents.py  layers.py  maps.py  users.py
