[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
]
dependencies = [
    "tinydb>=4.8.0",
    "click>=8.1.7",
    "requests>=2.31.0",
    "django-environ>=0.11.2",
    "bs4>=0.0.2",
    "lxml>=5.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
gn-migrate.cmd = "src/main.py"
gn-migrate.env_file = ".env"